# music-gap

./: .gitignore
app/: build.gradle
app/src/androidTest/java/dk/rmls/musicgap/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/fluidsynth/include/: fluidsynth.h
app/src/main/cpp/fluidsynth/include/fluidsynth/: audio.h  midi.h  seq.h  synth.h  types.h  voice.h
app/src/main/cpp/fluidsynth/lib/arm64-v8a/cmake/fluidsynth/: FluidSynthTargets.cmake
app/src/main/cpp/fluidsynth/lib/arm64-v8a/pkgconfig/: fluidsynth.pc  libinstpatch-1.0.pc  vorbis.pc  vorbisfile.pc
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/cmake/Opus/: OpusConfigVersion.cmake
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/cmake/fluidsynth/: FluidSynthTargets.cmake
app/src/main/cpp/fluidsynth/lib/armeabi-v7a/pkgconfig/: fluidsynth.pc  gmodule-no-export-2.0.pc  gthread-2.0.pc  libffi.pc  oboe-1.0.pc  ogg.pc
app/src/main/cpp/fluidsynth/lib/x86/cmake/Opus/: OpusConfig.cmake
app/src/main/cpp/fluidsynth/lib/x86/cmake/fluidsynth/: FluidSynthConfigVersion.cmake  FluidSynthTargets.cmake
app/src/main/cpp/fluidsynth/lib/x86/glib-2.0/include/: glibconfig.h
app/src/main/cpp/fluidsynth/lib/x86/pkgconfig/: fluidsynth.pc  gio-2.0.pc  glib-2.0.pc  libpcre.pc  libpcreposix.pc
app/src/main/cpp/fluidsynth/lib/x86_64/cmake/fluidsynth/: FluidSynthTargets.cmake
app/src/main/cpp/fluidsynth/lib/x86_64/glib-2.0/include/: glibconfig.h
app/src/main/cpp/fluidsynth/lib/x86_64/pkgconfig/: flac.pc  fluidsynth.pc  gio-unix-2.0.pc  gmodule-export-2.0.pc  gobject-2.0.pc  opus.pc  sndfile.pc  vorbisenc.pc
app/src/main/java/dk/rmls/musicgap/: FluidSynth.java  IOUtil.java  MainActivity.java  MathUtil.java  ThreadUtil.java  UIUtil.java
app/src/main/res/layout/: container.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/dk/rmls/musicgap/: ExampleUnitTest.java
